[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/fall_pos.gd" type="Script" id=1]
[ext_resource path="res://textures/water_test.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource/name = "fall"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("n:transform/scale")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("n:visibility/opacity")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("n:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 87, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("water_test:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("water_test:frame")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 6, 8, 11 ]
}

[node name="fall_pos" type="Position2D"]

visibility/opacity = 4.0
script/script = ExtResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fall = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fall"

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.01
one_shot = true
autostart = true

[node name="n" type="Node2D" parent="."]

[node name="water_test" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 6
modulate = Color( 0.195312, 0.842988, 1, 0.147529 )

[connection signal="finished" from="anim" to="." method="_on_anim_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


